--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -169,7 +169,9 @@
   }
 }
 
+/* ********************************************************** */
 /* How I can help */
+/* ********************************************************** */
 
 .home-how-help {
   padding: 6rem 0;
@@ -451,6 +453,114 @@
   @media (min-width: 1440px) {
     &__container {
       width: 80%;
+    }
+  }
+}
+
+/* ********************************************************** */
+/* Home about highlight */
+/* ********************************************************** */
+
+.home-about-highlight {
+  padding: 4rem 0;
+  background-color: var(--colorBackground);
+
+  &__inner {
+    width: 80%;
+
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  &__content {
+    text-align: center;
+  }
+
+  &__header {
+    margin-bottom: 1.75rem;
+  }
+
+  &__title {
+    margin: 0 0 1.5rem;
+    font-family: var(--fontHeading);
+    font-size: 2rem;
+    line-height: 1.1;
+    color: var(--colorPrimary);
+  }
+
+  &__title-line {
+    display: block;
+  }
+
+  &__divider {
+    display: block;
+    width: 3px;
+    height: 3.5rem;
+    margin: 0 auto;
+    background-color: var(--colorMainBackground);
+  }
+
+  &__text {
+    max-width: 40rem;
+    margin: 0 auto 2rem;
+    font-size: 0.9375rem;
+    line-height: 1.7;
+    color: var(--colorPrimary);
+  }
+
+  &__button {
+    display: inline-block;
+  }
+
+  &__media {
+    order: 1;
+  }
+
+  &__image-wrapper {
+    position: relative;
+    width: 90%;
+    /* max-width: 360px; */
+    margin: 0 auto;
+    aspect-ratio: 3 / 5;
+    border-radius: 1.5rem;
+    overflow: hidden;
+    height: 600px;
+  }
+
+  &__image {
+    object-fit: cover;
+  }
+
+  @media (min-width: 960px) {
+    &__inner {
+      display: grid;
+      grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+      align-items: center;
+      /* gap: 1rem; */
+    }
+
+    &__content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__title {
+      text-align: left;
+    }
+
+    &__text {
+      margin-left: 0;
+      margin-right: 0;
+    }
+
+    &__media {
+      width: 480px;
+      height: 600px;
+      order: 1;
+      justify-self: center;
     }
   }
 }
