--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -6,11 +6,8 @@
   --colorPrimaryLight: #c5d3d6;
   --colorSecondary: #8fbaea;
   --colorMainBackground: #c5d3d6;
-  --colorMainBackgroundMobile: linear-gradient(
-    180deg,
-    rgba(197, 211, 214, 1) 0%,
-    rgba(242, 242, 242, 0.1) 100%
-  );
+  --colorMainBackgroundMobile: linear-gradient(180deg, #c5d3d6 0%, #ffffff 65%);
+
   --colorBackground: #ffffff;
   --colorText: #37516e;
 
